chore: add appsettings.Development.json to .gitignore to protect local secrets

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+# Database ans secret configurations
+appsettings.Development.json
 # .NET
 bin/
 obj/
@@ -6,6 +9,7 @@ obj/
 *.userosscache
 *.sln.docstates
 *.csproj.user
+
 
 # Visual Studio Code
 .vscode/
