chore(config): add appsettings.json with logging, JWT, DB, CORS, and background job settings

--- a/src/SmartTaskManagementAPI.API/appsettings.json
+++ b/src/SmartTaskManagementAPI.API/appsettings.json
@@ -2,14 +2,76 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Hangfire": "Warning"
     }
   },
-    "JwtSettings": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Hangfire": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/smarttask-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "JwtSettings": {
+    "Secret": "YourSuperSecretKeyHereThatIsAtLeast32CharactersLong!ChangeThisInProduction!",
     "Issuer": "SmartTaskManagementAPI",
     "Audience": "SmartTaskManagementAPI.Client",
-    "AccessTokenExpirationMinutes": 15,
+    "AccessTokenExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
-  }
-
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Port=5432;Database=SmartTaskDB;Username=admin;Password=Admin123!;Pooling=true;Minimum Pool Size=1;Maximum Pool Size=20;Connection Lifetime=300;Timeout=30;Command Timeout=30"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "http://localhost:4200",
+      "http://localhost:8080"
+    ]
+  },
+  "Hangfire": {
+    "WorkerCount": 10,
+    "Queues": [ "default" ],
+    "SchedulePollingInterval": 15
+  },
+  "BackgroundJobs": {
+    "TaskReminderCron": "*/30 * * * *",
+    "OverdueNotificationCron": "0 9 * * *",
+    "DatabaseCleanupCron": "0 2 * * 0",
+    "MaxRetryAttempts": 3,
+    "RetryDelayInSeconds": 60
+  },
+  "ApiSettings": {
+    "DefaultPageSize": 20,
+    "MaxPageSize": 100,
+    "EnableResponseCaching": true,
+    "CacheDurationSeconds": 60,
+    "EnableRequestLogging": true,
+    "EnableDetailedErrors": true
+  },
+  "AllowedHosts": "*"
 }
