--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,72 +12,65 @@
   </PropertyGroup>
 
   <ItemGroup>
-
     <!-- ========================= -->
     <!-- API Layer Packages        -->
     <!-- ========================= -->
-
     <PackageVersion Include="Asp.Versioning.Mvc" Version="8.0.0" />
     <PackageVersion Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.0.0" />
-
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-
     <PackageVersion Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
     <PackageVersion Include="AspNetCore.HealthChecks.NpgSql" Version="8.0.0" />
-
     <PackageVersion Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageVersion Include="Serilog.Sinks.Seq" Version="7.0.0" />
-
     <PackageVersion Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
-
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
 
     <!-- ========================= -->
     <!-- Application Layer         -->
     <!-- ========================= -->
-
     <PackageVersion Include="MediatR" Version="12.2.0" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.0" />
-
     <PackageVersion Include="AutoMapper" Version="12.0.1" />
     <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-
     <PackageVersion Include="FluentValidation" Version="11.8.1" />
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
-
     <PackageVersion Include="ErrorOr" Version="1.3.0" />
-
     <PackageVersion Include="Ardalis.Specification" Version="8.0.0" />
     <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="8.0.0" />
-
     <PackageVersion Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
 
     <!-- ========================= -->
     <!-- Infrastructure Layer      -->
     <!-- ========================= -->
-
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.4" />
-
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
-
     <PackageVersion Include="EFCore.CheckConstraints" Version="8.0.1" />
     <PackageVersion Include="EFCore.NamingConventions" Version="8.0.3" />
-
     <PackageVersion Include="Hangfire" Version="1.8.9" />
     <PackageVersion Include="Hangfire.PostgreSql" Version="1.20.5" />
     <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.9" />
-
     <PackageVersion Include="SendGrid" Version="9.29.3" />
     <PackageVersion Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
 
-  </ItemGroup>
+    <!-- ========================= -->
+    <!-- Testing Packages          -->
+    <!-- ========================= -->
+    <PackageVersion Include="coverlet.collector" Version="6.0.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageVersion Include="xunit" Version="2.6.6" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.6" />
+    <PackageVersion Include="FluentAssertions" Version="8.8.0" />
+    <PackageVersion Include="Moq" Version="4.20.70" />
+    <PackageVersion Include="Respawn" Version="6.2.1" />
+    <PackageVersion Include="Testcontainers.PostgreSql" Version="3.9.0" />
 
+  </ItemGroup>
 </Project>
