--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -63,6 +63,10 @@
     <!-- ========================= -->
     <!-- Testing Packages          -->
     <!-- ========================= -->
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.4" />
+    <PackageVersion Include="AspNetCore.HealthChecks.Hangfire" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
+
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageVersion Include="xunit" Version="2.6.6" />
@@ -71,6 +75,7 @@
     <PackageVersion Include="Moq" Version="4.20.70" />
     <PackageVersion Include="Respawn" Version="6.2.1" />
     <PackageVersion Include="Testcontainers.PostgreSql" Version="3.9.0" />
+    
 
   </ItemGroup>
 </Project>
