docs(api): add appsettings.json to git ignore

--- a/src/SmartTaskManagement.API/appsettings.json
+++ b/src/SmartTaskManagement.API/appsettings.json
@@ -25,14 +25,11 @@
   "ApiSettings": {
     "Version": "1.0",
     "Title": "Smart Task Management API",
-    "Description": "Enterprise-grade Task Management API with Clean Architecture",
-    "ContactName": "API Support",
-    "ContactEmail": "api-support@smarttaskmanagement.com",
-    "LicenseName": "MIT",
-    "LicenseUrl": "https://opensource.org/licenses/MIT"
+    "Description": "Enterprise-grade Task Management API with Clean Architecture"
+    
   },
   "Cors": {
-    "AllowedOrigins": ["http://localhost:3000", "http://localhost:4200"],
+    "AllowedOrigins": ["http://localhost:3000", "http://localhost:4200", "http://127.0.0.1:5000" ],
     "AllowedMethods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
     "AllowedHeaders": [
       "Authorization",
